--- a/index.html
+++ b/index.html
@@ -8,23 +8,55 @@
   </head>
   <body>
     <header>
-      <nav>
-        <ol>
-          <li>
-            <a>Portafolio</a>
-          </li>
-          <li>
-            <a>Experiencia</a>
-          </li>
-          <li>
-            <a>Trabajemos juntos</a>
-          </li>
-        </ol>
-      </nav>
+      <div>
+        <nav>
+          <ol>
+            <li>
+              <a>Portafolio</a>
+            </li>
+            <li>
+              <a>Experiencia</a>
+            </li>
+            <li>
+              <a>Trabajemos juntos</a>
+            </li>
+          </ol>
+        </nav>
+      </div>      
     </header>
-    <section>sección principal</section>
-    <section>sección portafolio</section>    
-    <section>sección eventos</section>    
+    <section>
+      <h1>Hola! soy <strong>Yennifer Herrera</strong> 
+        <br /> Desarrolladora Front-end 
+      </h1>
+      <img /> imagen de portada
+    </section>
+    <section>
+      <h2>Portafolio (Proyectos Destacados)</h2>
+      <article>
+        <h3>Platzi Video</h3>
+        <h6>React Native / React</h6>
+        <p><small><strong>Fecha:</strong>01/07/2018</small></p>
+        <p><small><strong>Puedes verlo en:</strong> www.platzi.com/native</small></p>
+        <p>Platzi Video fue el resultado de 3 meses de trabajo para crear 
+          la mejor app para enseñar el funcionamiento de React y React Native. 
+          Desde crear un vista-detalle, hasta patrones avanzados de navegación, 
+          este proyecto ha sido el ejemplo de futuros creadores de aplicaciones 
+          multiplataforma.
+        </p>
+      </article>
+    </section>    
+    <section>
+      <h2>Más sobre mi experiencia</h2>
+      <article>
+        <figure>
+          <img />
+        </figure>
+        <h3>PlatziConf México 2018</h3>
+        <p>El evento más grande sobre gente que quiere aprender más de internet.
+           En este evento te comparto cómo tener una vida de constante aprendizaje.
+        </p>
+      </article>
+    </section>    
     <section>section contacto</section>    
     <footer></footer>
   </body>  
