--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Leonidas Esteban</title>
+    <link rel="icon" href="images/favicon.png" type="image/png">
   </head>
   <body>
     <header>
       <div>
+        <figure>
+          <img src="images/logo.png" alt="Logo de http://leonidasesteban.com" />
+        </figure>
         <nav>
           <ol>
             <li>
-              <a>Portafolio</a>
+              <a href="">Portafolio</a>
             </li>
             <li>
               <a>Experiencia</a>
@@ -28,7 +32,7 @@
       <h1>Hola! soy <strong>Yennifer Herrera</strong> 
         <br /> Desarrolladora Front-end 
       </h1>
-      <img /> imagen de portada
+      <img src="images/hero.jpg" width="500" height="300" alt="imagen principal del sitio"/>
     </section>
     <section>
       <h2>Portafolio (Proyectos Destacados)</h2>
@@ -43,13 +47,14 @@
           este proyecto ha sido el ejemplo de futuros creadores de aplicaciones 
           multiplataforma.
         </p>
+        <img src="images/platzi-video-react-native.png" alt="proyecto del curso de React Native " width="500">
       </article>
     </section>    
     <section>
       <h2>Más sobre mi experiencia</h2>
       <article>
         <figure>
-          <img />
+          <img src="images/platzi-conf.jpg" width="500" />
         </figure>
         <h3>PlatziConf México 2018</h3>
         <p>El evento más grande sobre gente que quiere aprender más de internet.
