Añadiendo form y otros tags

--- a/index.html
+++ b/index.html
@@ -60,9 +60,16 @@
         <p>El evento más grande sobre gente que quiere aprender más de internet.
            En este evento te comparto cómo tener una vida de constante aprendizaje.
         </p>
+        <a href="">Ver Plática</a>
       </article>
     </section>    
-    <section>section contacto</section>    
-    <footer></footer>
+    <section>
+      <form action="/suscripcion/">
+        <h3>¿Creamos algo juntos?</h3>
+        <input type="text" placeholder="Déjame tu email">
+        <button>Enviar</button>
+      </form>
+    </section>    
+    <footer>footer</footer>
   </body>  
 </html>
