--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <nav>
           <ol>
             <li>
-              <a href="">Portafolio</a>
+              <a href="#Portafolio">Portafolio</a>
             </li>
             <li>
-              <a>Experiencia</a>
+              <a href="#Eventos">Experiencia</a>
             </li>
             <li>
-              <a>Trabajemos juntos</a>
+              <a href="#Contacto">Trabajemos juntos</a>
             </li>
           </ol>
         </nav>
@@ -34,7 +34,7 @@
       </h1>
       <img src="images/hero.jpg" width="500" height="300" alt="imagen principal del sitio"/>
     </section>
-    <section>
+    <section id="Portafolio">
       <h2>Portafolio (Proyectos Destacados)</h2>
       <article>
         <h3>Platzi Video</h3>
@@ -50,7 +50,7 @@
         <img src="images/platzi-video-react-native.png" alt="proyecto del curso de React Native " width="500">
       </article>
     </section>    
-    <section>
+    <section id="Eventos">
       <h2>Más sobre mi experiencia</h2>
       <article>
         <figure>
@@ -60,10 +60,10 @@
         <p>El evento más grande sobre gente que quiere aprender más de internet.
            En este evento te comparto cómo tener una vida de constante aprendizaje.
         </p>
-        <a href="">Ver Plática</a>
+        <a target="_blank" href="https://www.youtube.com/watch?v=BIS7cWGgJg0">Ver Plática</a>
       </article>
     </section>    
-    <section>
+    <section id="Contacto">
       <form action="/suscripcion/">
         <h3>¿Creamos algo juntos?</h3>
         <input type="text" placeholder="Déjame tu email">
