--- a/index.html
+++ b/index.html
@@ -5,71 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Leonidas Esteban</title>
+    <link rel="stylesheet" href="css/estilos.css">
     <link rel="icon" href="images/favicon.png" type="image/png">
   </head>
   <body>
-    <header>
+    <header class="header">
       <div>
-        <figure>
+        <figure class="logo">
           <img src="images/logo.png" alt="Logo de http://leonidasesteban.com" />
         </figure>
-        <nav>
+        <nav class="menu">
           <ol>
             <li>
-              <a href="#Portafolio">Portafolio</a>
+              <a class="link" href="#Portafolio">Portafolio</a>
             </li>
             <li>
-              <a href="#Eventos">Experiencia</a>
+              <a class="link" href="#Eventos">Experiencia</a>
             </li>
             <li>
-              <a href="#Contacto">Trabajemos juntos</a>
+              <a class="link" href="#Contacto">Trabajemos juntos</a>
             </li>
           </ol>
         </nav>
       </div>      
     </header>
-    <section>
+    <section class="hero">
       <h1>Hola! soy <strong>Yennifer Herrera</strong> 
         <br /> Desarrolladora Front-end 
       </h1>
       <img src="images/hero.jpg" width="500" height="300" alt="imagen principal del sitio"/>
     </section>
-    <section id="Portafolio">
+    <section class="portfolio" id="Portafolio">
       <h2>Portafolio (Proyectos Destacados)</h2>
-      <article>
-        <h3>Platzi Video</h3>
-        <h6>React Native / React</h6>
-        <p><small><strong>Fecha:</strong>01/07/2018</small></p>
-        <p><small><strong>Puedes verlo en:</strong> www.platzi.com/native</small></p>
-        <p>Platzi Video fue el resultado de 3 meses de trabajo para crear 
+      <article class="project">
+        <h3 class="project-tittle">Platzi Video</h3>
+        <h6 class="project-course">React Native / React</h6>
+        <p class="project-date"><small><strong>Fecha:</strong>01/07/2018</small></p>
+        <p class="project-url"><small><strong>Puedes verlo en:</strong> www.platzi.com/native</small></p>
+        <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo para crear 
           la mejor app para enseñar el funcionamiento de React y React Native. 
           Desde crear un vista-detalle, hasta patrones avanzados de navegación, 
           este proyecto ha sido el ejemplo de futuros creadores de aplicaciones 
           multiplataforma.
         </p>
-        <img src="images/platzi-video-react-native.png" alt="proyecto del curso de React Native " width="500">
+        <figure class="project-imageContainer">
+          <img class="project-image" src="images/platzi-video-react-native.png" alt="proyecto del curso de React Native " width="500">
+        </figure>
       </article>
     </section>    
-    <section id="Eventos">
+    <section id="Eventos" >
       <h2>Más sobre mi experiencia</h2>
-      <article>
-        <figure>
-          <img src="images/platzi-conf.jpg" width="500" />
+      <article class="event">
+        <figure class="event-imageContainer">
+          <img class="event-image" src="images/platzi-conf.jpg" width="500" />
         </figure>
-        <h3>PlatziConf México 2018</h3>
-        <p>El evento más grande sobre gente que quiere aprender más de internet.
+        <h3 class="event-title">PlatziConf México 2018</h3>
+        <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet.
            En este evento te comparto cómo tener una vida de constante aprendizaje.
         </p>
-        <a target="_blank" href="https://www.youtube.com/watch?v=BIS7cWGgJg0">Ver Plática</a>
+        <a class="event-url" target="_blank" href="https://www.youtube.com/watch?v=BIS7cWGgJg0">Ver Plática</a>
       </article>
     </section>    
-    <section id="Contacto">
-      <form action="/suscripcion/">
+    <section id="Contacto" class="contact">
+      <form action="/suscripcion/" class="form-email">
         <h3>¿Creamos algo juntos?</h3>
         <input type="text" placeholder="Déjame tu email">
         <button>Enviar</button>
       </form>
     </section>    
-    <footer>footer</footer>
+    <footer class="footer">footer</footer>
   </body>  
 </html>
