--- a/index.html
+++ b/index.html
@@ -31,26 +31,29 @@
       </div>      
     </header>
     <section class="hero">
-      <h1>Hola! soy <strong>Yennifer Herrera</strong> 
-        <br /> Desarrolladora Front-end 
+      <h1>Hola! Soy <strong>Leonidas Esteban</strong> 
+        <br /> Desarrollador Javascript con
+        <br /> pasión por la enseñanza
       </h1>
       <img src="images/hero.jpg" width="500" height="300" alt="imagen principal del sitio"/>
     </section>
     <section class="portfolio" id="Portafolio">
       <h2>Portafolio (Proyectos Destacados)</h2>
       <article class="project">
-        <h3 class="project-tittle">Platzi Video</h3>
-        <h6 class="project-course">React Native / React</h6>
-        <p class="project-date"><small><strong>Fecha:</strong>01/07/2018</small></p>
-        <p class="project-url"><small><strong>Puedes verlo en:</strong> www.platzi.com/native</small></p>
-        <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo para crear 
-          la mejor app para enseñar el funcionamiento de React y React Native. 
-          Desde crear un vista-detalle, hasta patrones avanzados de navegación, 
-          este proyecto ha sido el ejemplo de futuros creadores de aplicaciones 
-          multiplataforma.
-        </p>
+        <div class="project-details">
+          <h3 class="project-tittle">Platzi Video</h3>
+          <h6 class="project-course">React Native / React</h6>
+          <p class="project-date"><small><strong>Fecha:</strong>01/07/2018</small></p>
+          <p class="project-url"><small><strong>Puedes verlo en:</strong> www.platzi.com/native</small></p>
+          <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo para crear 
+            la mejor app para enseñar el funcionamiento de React y React Native. 
+            Desde crear un vista-detalle, hasta patrones avanzados de navegación, 
+            este proyecto ha sido el ejemplo de futuros creadores de aplicaciones 
+            multiplataforma.
+          </p>
+        </div>
         <figure class="project-imageContainer">
-          <img class="project-image" src="images/platzi-video-react-native.png" alt="proyecto del curso de React Native " width="500">
+          <!-- <img class="project-image" src="images/platzi-video-react-native.png" alt="proyecto del curso de React Native " width="500"> -->
         </figure>
       </article>
     </section>    
