Agregando los estilos del hero y del header

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     </header>
     <section class="hero">
       <h1>Hola! Soy <strong>Leonidas Esteban</strong> 
-        <br /> Desarrollador Javascript con
-        <br /> pasión por la enseñanza
+        <br /> Desarrollador <strong>Javascript</strong> con
+        <br /> pasión por la <strong>enseñanza</strong> 
       </h1>
-      <img src="images/hero.jpg" width="500" height="300" alt="imagen principal del sitio"/>
+      <!-- <img src="images/hero.jpg" width="500" height="300" alt="imagen principal del sitio"/> -->
     </section>
     <section class="portfolio" id="Portafolio">
       <h2>Portafolio (Proyectos Destacados)</h2>
@@ -53,7 +53,7 @@
           </p>
         </div>
         <figure class="project-imageContainer">
-          <!-- <img class="project-image" src="images/platzi-video-react-native.png" alt="proyecto del curso de React Native " width="500"> -->
+          <img class="project-image" src="images/platzi-video-react-native.png" alt="proyecto del curso de React Native " width="500">
         </figure>
       </article>
     </section>    
