--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="header">
       <figure class="logo">
-        <img src="images/logo.png" alt="Logo de http://leonidasesteban.com" />
+        <img src="images/logo.png" height="50px" alt="Logo de http://leonidasesteban.com" />
       </figure>
       <nav class="menu">
         <ol>
@@ -92,6 +92,13 @@
         <button>Enviar</button>
       </form>
     </section>    
-    <footer class="footer">footer</footer>
+    <footer class="footer">
+      <div>
+        <p>Curso de desarrollo web online 2018 <img src="images/platzi.png" alt="Logo de platzi.com" width="80px"></p>
+      </div>
+      <div>
+        <p>Designed with <\3 by <a href="https://twitter.com/thespianartist">@thespianartist</a> </p>
+      </div>
+    </footer>
   </body>  
 </html>
