--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h2>Portafolio (Proyectos Destacados)</h2>
       <article class="project">
         <div class="project-details">
-          <h3 class="project-tittle">Platzi Video</h3>
+          <h3 class="project-title">Platzi Video</h3>
           <h6 class="project-course">React Native / React</h6>
           <p class="project-date"><small><strong>Fecha:</strong>01/07/2018</small></p>
           <p class="project-url"><small><strong>Puedes verlo en:</strong> www.platzi.com/native</small></p>
@@ -56,7 +56,7 @@
       </article>
       <article class="project">
         <div class="project-details">
-          <h3 class="project-tittle">Platzi Video</h3>
+          <h3 class="project-title">Platzi Video</h3>
           <h6 class="project-course">React Native / React</h6>
           <p class="project-date"><small><strong>Fecha:</strong>01/07/2018</small></p>
           <p class="project-url"><small><strong>Puedes verlo en:</strong> www.platzi.com/native</small></p>
@@ -72,17 +72,55 @@
         </figure>
       </article>
     </section>    
-    <section id="Eventos" >
-      <h2>Más sobre mi experiencia</h2>
+    <h2 class="event-list-title">Más sobre mi experiencia</h2>
+    <section id="Eventos" class="event-list">
       <article class="event">
         <figure class="event-imageContainer">
           <img class="event-image" src="images/platzi-conf.jpg" width="500" />
         </figure>
-        <h3 class="event-title">PlatziConf México 2018</h3>
-        <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet.
-           En este evento te comparto cómo tener una vida de constante aprendizaje.
-        </p>
-        <a class="event-url" target="_blank" href="https://www.youtube.com/watch?v=BIS7cWGgJg0">Ver Plática</a>
+        <div class="event-detail">
+          <h3 class="event-title">PlatziConf México 2018</h3>
+          <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet.
+            En este evento te comparto cómo tener una vida de constante aprendizaje.
+          </p>
+          <a class="event-url" target="_blank" href="https://www.youtube.com/watch?v=BIS7cWGgJg0">Ver Plática</a>
+        </div>
+      </article>
+      <article class="event">
+        <figure class="event-imageContainer">
+          <img class="event-image" src="images/platzi-conf.jpg" width="500" />
+        </figure>
+        <div class="event-detail">
+          <h3 class="event-title">PlatziConf México 2018</h3>
+          <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet.
+            En este evento te comparto cómo tener una vida de constante aprendizaje.
+          </p>
+          <a class="event-url" target="_blank" href="https://www.youtube.com/watch?v=BIS7cWGgJg0">Ver Plática</a>
+        </div>
+      </article>
+      <article class="event">
+        <figure class="event-imageContainer">
+          <img class="event-image" src="images/platzi-conf.jpg" width="500" />
+        </figure>
+        <div class="event-detail">
+          <h3 class="event-title">PlatziConf México 2018</h3>
+          <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet.
+            En este evento te comparto cómo tener una vida de constante aprendizaje.
+          </p>
+          <a class="event-url" target="_blank" href="https://www.youtube.com/watch?v=BIS7cWGgJg0">Ver Plática</a>
+        </div>
+      </article>
+      <article class="event">
+        <figure class="event-imageContainer">
+          <img class="event-image" src="images/platzi-conf.jpg" width="500" />
+        </figure>
+        <div class="event-detail">
+          <h3 class="event-title">PlatziConf México 2018</h3>
+          <p class="event-description">El evento más grande sobre gente que quiere aprender más de internet.
+            En este evento te comparto cómo tener una vida de constante aprendizaje.
+          </p>
+          <a class="event-url" target="_blank" href="https://www.youtube.com/watch?v=BIS7cWGgJg0">Ver Plática</a>
+        </div>
       </article>
     </section>    
     <section id="Contacto" class="contact">
