--- a/index.html
+++ b/index.html
@@ -129,6 +129,12 @@
         <input type="text" placeholder="Déjame tu email">
         <button>Enviar</button>
       </form>
+      <div class="social">
+        <a class="social-link twitter" href="http://twitter.com/leonidasesteban" target="_blank" rel="noopener noreferrer"></a>
+        <a class="social-link facebook" href="http://facebook.com/leonidas.esteban" target="_blank" rel="noopener noreferrer"></a>
+        <a class="social-link github" href="http://github.com/leonidasesteban" target="_blank" rel="noopener noreferrer"></a>
+        <a class="social-link instagram" href="http://instagram.com/leonidasesteban" target="_blank" rel="noopener noreferrer"></a>
+      </div>
     </section>    
     <footer class="footer">
       <div>
