--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Leonidas Esteban</title>
-    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilos.css">
-    <link rel="icon" href="images/favicon.png" type="image/png">
-  </head>
-  <body>
-    <header class="header">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Leonidas Esteban</title>
+  <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet">
+  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="icon" href="images/favicon.png" type="image/png">
+</head>
+
+<body>
+  <header class="header">
+    <div class="container">
       <figure class="logo">
         <img src="images/logo.png" height="50px" alt="Logo de http://leonidasesteban.com" />
       </figure>
@@ -26,16 +29,20 @@
             <a class="link" href="#Contacto">Trabajemos juntos</a>
           </li>
         </ol>
-      </nav> 
-    </header>
-    <section class="hero">
-      <h1>Hola! Soy <strong>Leonidas Esteban</strong> 
+      </nav>
+    </div>
+  </header>
+  <section class="hero">
+    <div class="container">
+      <h1>Hola! Soy <strong>Leonidas Esteban</strong>
         <br /> Desarrollador <strong>Javascript</strong> con
-        <br /> pasión por la <strong>enseñanza</strong> 
+        <br /> pasión por la <strong>enseñanza</strong>
       </h1>
-      <!-- <img src="images/hero.jpg" width="500" height="300" alt="imagen principal del sitio"/> -->
-    </section>
-    <section class="portfolio" id="Portafolio">
+      <img class="hero-image" src="images/hero.jpg" width="500" height="300" alt="imagen principal del sitio" />
+    </div>
+  </section>
+  <section class="portfolio" id="Portafolio">
+    <div class="container">
       <h2>Portafolio (Proyectos Destacados)</h2>
       <article class="project">
         <div class="project-details">
@@ -43,15 +50,16 @@
           <h6 class="project-course">React Native / React</h6>
           <p class="project-date"><small><strong>Fecha:</strong>01/07/2018</small></p>
           <p class="project-url"><small><strong>Puedes verlo en:</strong> www.platzi.com/native</small></p>
-          <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo para crear 
-            la mejor app para enseñar el funcionamiento de React y React Native. 
-            Desde crear un vista-detalle, hasta patrones avanzados de navegación, 
-            este proyecto ha sido el ejemplo de futuros creadores de aplicaciones 
+          <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo para crear
+            la mejor app para enseñar el funcionamiento de React y React Native.
+            Desde crear un vista-detalle, hasta patrones avanzados de navegación,
+            este proyecto ha sido el ejemplo de futuros creadores de aplicaciones
             multiplataforma.
           </p>
         </div>
         <figure class="project-imageContainer">
-          <img class="project-image" src="images/platzi-video-react-native.png" alt="proyecto del curso de React Native " width="500">
+          <img class="project-image" src="images/platzi-video-react-native.png" alt="proyecto del curso de React Native "
+            width="500">
         </figure>
       </article>
       <article class="project">
@@ -60,20 +68,25 @@
           <h6 class="project-course">React Native / React</h6>
           <p class="project-date"><small><strong>Fecha:</strong>01/07/2018</small></p>
           <p class="project-url"><small><strong>Puedes verlo en:</strong> www.platzi.com/native</small></p>
-          <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo para crear 
-            la mejor app para enseñar el funcionamiento de React y React Native. 
-            Desde crear un vista-detalle, hasta patrones avanzados de navegación, 
-            este proyecto ha sido el ejemplo de futuros creadores de aplicaciones 
+          <p class="project-description">Platzi Video fue el resultado de 3 meses de trabajo para crear
+            la mejor app para enseñar el funcionamiento de React y React Native.
+            Desde crear un vista-detalle, hasta patrones avanzados de navegación,
+            este proyecto ha sido el ejemplo de futuros creadores de aplicaciones
             multiplataforma.
           </p>
         </div>
         <figure class="project-imageContainer">
-          <img class="project-image" src="images/platzi-video-react-native.png" alt="proyecto del curso de React Native " width="500">
+          <img class="project-image" src="images/platzi-video-react-native.png" alt="proyecto del curso de React Native "
+            width="500">
         </figure>
       </article>
-    </section>    
+    </div>
+  </section>
+  <div class="container">
     <h2 class="event-list-title">Más sobre mi experiencia</h2>
-    <section id="Eventos" class="event-list">
+  </div>
+  <section id="Eventos" class="event-list">
+    <div class="container">
       <article class="event">
         <figure class="event-imageContainer">
           <img class="event-image" src="images/platzi-conf.jpg" width="500" />
@@ -122,8 +135,10 @@
           <a class="event-url" target="_blank" href="https://www.youtube.com/watch?v=BIS7cWGgJg0">Ver Plática</a>
         </div>
       </article>
-    </section>    
-    <section id="Contacto" class="contact">
+    </div>
+  </section>
+  <section id="Contacto" class="contact">
+    <div class="container">
       <form action="/suscripcion/" class="form-email">
         <h3>¿Creamos algo juntos?</h3>
         <input type="text" placeholder="Déjame tu email">
@@ -135,14 +150,18 @@
         <a class="social-link github" href="http://github.com/leonidasesteban" target="_blank" rel="noopener noreferrer"></a>
         <a class="social-link instagram" href="http://instagram.com/leonidasesteban" target="_blank" rel="noopener noreferrer"></a>
       </div>
-    </section>    
-    <footer class="footer">
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
       <div>
         <p>Curso de desarrollo web online 2018 <img src="images/platzi.png" alt="Logo de platzi.com" width="80px"></p>
       </div>
       <div>
         <p>Designed with <\3 by <a href="https://twitter.com/thespianartist">@thespianartist</a> </p>
       </div>
-    </footer>
-  </body>  
+    </div>
+  </footer>
+</body>
+
 </html>
