--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <p>Curso de desarrollo web online 2018 <img src="images/platzi.png" alt="Logo de platzi.com" width="80px"></p>
       </div>
       <div>
-        <p>Designed with <\3 by <a target="_blank" href="https://twitter.com/thespianartist">@thespianartist</a> </p>
+        <p>Designed with &lt;3 by <a target="_blank" href="https://twitter.com/thespianartist">@thespianartist</a> </p>
       </div>
     </div>
   </footer>
